--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>히라가나 · 가타카나 암기 연습</title>
+  <title>히라가나 · 가타카나 연습</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;700&family=Noto+Sans+JP:wght@500;700&display=swap" rel="stylesheet">
   <style>
@@ -155,7 +155,7 @@
       <div class="brand">
         <div class="logo" id="logoChar">あ</div>
         <div>
-          <h1>히라가나 · 가타카나 암기 연습</h1>
+          <h1>히라가나 · 가타카나 연습</h1>
           <div class="sublabel">아 행부터 선택한 행까지 랜덤 출제 • 정답이면 자동 다음</div>
         </div>
       </div>
@@ -420,3 +420,4 @@ skipBtn.addEventListener('click', () => { if(started){ idx++; showQuestion(); } 
 </script>
 </body>
 </html>
+
