--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="logo" id="logoChar">あ</div>
         <div>
           <h1>히라가나 · 가타카나 연습</h1>
-          <div class="sublabel">아 행부터 선택한 행까지 랜덤 출제 • 정답이면 자동 다음</div>
+          <div class="sublabel">아 행부터 선택한 행까지 랜덤 출제 • 히라가나, 가타카나 가능.</div>
         </div>
       </div>
       <div class="controls">
@@ -420,4 +420,5 @@ skipBtn.addEventListener('click', () => { if(started){ idx++; showQuestion(); } 
 </script>
 </body>
 </html>
+
 
